# elixa-api

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  makemigrations.sh  pyproject.toml
.cursor/rules/: fastapi.mdc  main-rules.mdc  project-about.mdc
alembic/: env.py
alembic/versions/: 08274133ea79_add_google_analytics.py  0e7f28bc9fde_add_onboarded.py  13d0f00521ed_add_data_to_yandex_metric_integration.py  15e34d74c544_add_is_compared.py  54ade734336d_add_report_compares.py  61be00ff757f_add_metrics_integration.py  8986fd21f37f_remove_unnessary_fields.py  a357be0b1dde_add_integration.py  e9a3858064e6_initial.py
app/: dependencies.py  main.py
app/adapters/google_analytics/: client.py
app/adapters/y_metrika/: client.py
app/agent/: models.py  state.py  tools_agent.py
app/agent/prompts/: generate_conclusion.py  get_dates.py  get_metrika_data.py
app/agent/tools/: dates_parse_tool.py  google_analytics_data.py  google_analytics_params.py  yandex_metric.py  yandex_metric_params.py
app/converters/: __init__.py  excel.py
app/core/: config.py  constants.py  utils.py
app/database/: config.py
app/prompts/: human_report_conclusion.txt  system_report_conclusion.txt
app/routers/: __init__.py  auth.py  chats.py  companies.py  integrations.py  messages.py  reports.py  users.py
app/schemas/: __init__.py  chat.py  company.py  integration.py  report.py  user.py
app/services/: auth_service.py  background_tasks.py  chat_service.py  company_service.py  conclusion_service.py  integrations_service.py  message_service.py  report_service.py  s3_service.py
(+27 files in other folders)
